added into, feature, works, team

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,315 @@
         </div>
       </div>
     </section>
+
+    <section class="features">
+      <div class="container">
+        <ul class="features__items">
+          <li class="features__item features__item--featur-1">
+            <h3 class="features__title">
+              Easily Customised
+            </h3>
+            <p class="features__text">
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.
+            </p>
+          </li>
+          <li class="features__item features__item--featur-2">
+            <h3 class="features__title">
+              Responsive Ready
+            </h3>
+            <p class="features__text">
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.
+            </p>
+          </li>
+          <li class="features__item features__item--featur-3">
+            <h3 class="features__title">
+              Modern Design
+            </h3>
+            <p class="features__text">
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.
+            </p>
+          </li>
+          <li class="features__item features__item--featur-4">
+            <h3 class="features__title">
+              Clean Code
+            </h3>
+            <p class="features__text">
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.
+            </p>
+          </li>
+          <li class="features__item features__item--featur-5">
+            <h3 class="features__title">
+              Ready to Ship
+            </h3>
+            <p class="features__text">
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.
+            </p>
+          </li>
+          <li class="features__item features__item--featur-6">
+            <h3 class="features__title">
+              Download for Free
+            </h3>
+            <p class="features__text">
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="works">
+      <ul class="works__items">
+        <li class="works__item">
+          <img class="works__img" src="images/works/W1.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+        <li class="works__item">
+          <img class="works__img" src="images/works/W2.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+        <li class="works__item">
+          <img class="works__img" src="images/works/W3.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+        <li class="works__item">
+          <img class="works__img" src="images/works/W4.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+        <li class="works__item">
+          <img class="works__img" src="images/works/W5.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+        <li class="works__item">
+          <img class="works__img" src="images/works/W6.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+        <li class="works__item">
+          <img class="works__img" src="images/works/W7.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+        <li class="works__item">
+          <img class="works__img" src="images/works/W8.jpg" alt="works-photo" width="470" height="350">
+          <div class="works__content">
+            <p class="works__name">Project Name</p>
+            <p class="works__text">User Interface Design</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <section class="team">
+      <div class="container">
+        <ul class="team__items">
+          <li class="team__item">
+            <img class="team__img" src="images/team/t-1.jpg" alt="team__photo" width="270" height="270">
+            <h3 class="team__name">
+              Ruth Woods
+            </h3>
+            <p class="team__position">
+              Founder, CEO
+            </p>
+            <div class="team__text">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                amet risus.
+              </p>
+              <p>
+                Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
+                ornare vel eu leo.
+              </p>
+            </div>
+            <div class="social">
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#fb"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#tw"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#li"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li class="team__item">
+            <img class="team__img" src="images/team/t-2.jpg" alt="team__photo" width="270" height="270">
+            <h3 class="team__name">
+              Timothy Reed
+            </h3>
+            <p class="team__position">
+              Co-Founder, Developer
+            </p>
+            <div class="team__text">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                amet risus.
+              </p>
+              <p>
+                Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
+                ornare vel eu leo.
+              </p>
+            </div>
+            <div class="social">
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#fb"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#tw"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#li"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li class="team__item">
+            <img class="team__img" src="images/team/t-3.jpg" alt="team__photo" width="270" height="270">
+            <h3 class="team__name">
+              Victoria Valdez
+            </h3>
+            <p class="team__position">
+              UI Designer
+            </p>
+            <div class="team__text">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                amet risus.
+              </p>
+              <p>
+                Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
+                ornare vel eu leo.
+              </p>
+            </div>
+            <div class="social">
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#fb"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#tw"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#li"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li class="team__item">
+            <img class="team__img" src="images/team/t-4.jpg" alt="team__photo" width="270" height="270">
+            <h3 class="team__name">
+              Beverly Little
+            </h3>
+            <p class="team__position">
+              Data Scientist
+            </p>
+            <div class="team__text">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+                amet risus.
+              </p>
+              <p>
+                Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
+                ornare vel eu leo.
+              </p>
+            </div>
+            <div class="social">
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#fb"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#tw"></use>
+                </svg>
+              </a>
+
+              <a href="#" class="social__item">
+                <svg class="social__icon">
+                  <use xlink:href="images/social-icon/sprite.svg#li"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <div class="container">
+        <div class="testimonials__items">
+          <div class="testimonials__item">
+            <div class="testimonials__photo">
+              <img src="images/testimonials/testi.jpg" alt="photo">
+            </div>
+            <div class="testimonials__content">
+              <div class="reviews__text">
+                “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donecsed odio dui. Aenean eu leo quam..4.”
+              </div>
+              <div class="reviews__author">
+                Susan Sims, Interaction Designer at XYZ
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonials__item">
+            <div class="testimonials__photo">
+              <img src="images/testimonials/testi.jpg" alt="photo">
+            </div>
+            <div class="testimonials__content">
+              <div class="reviews__text">
+                “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donecsed odio dui. Aenean eu leo quam..4.”
+              </div>
+              <div class="reviews__author">
+                Andry Ostrov, Interaction Designer at XYZ
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
