added testimonials, download, footer

--- a/app/index.html
+++ b/app/index.html
@@ -344,39 +344,117 @@
     <section class="testimonials">
       <div class="container">
         <div class="testimonials__items">
-          <div class="testimonials__item">
-            <div class="testimonials__photo">
-              <img src="images/testimonials/testi.jpg" alt="photo">
-            </div>
-            <div class="testimonials__content">
-              <div class="reviews__text">
-                “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donecsed odio dui. Aenean eu leo quam..4.”
+          <!-- <div class="slick__item"> -->
+            <div class="testimonials__item">
+              <div class="testimonials__photo">
+                <img class="testimonials__icon" width="585" height="500" src="images/testimonials/testi.jpg"
+                  alt="photo">
               </div>
-              <div class="reviews__author">
-                Susan Sims, Interaction Designer at XYZ
+              <div class="testimonials__content">
+                <div class="testimonials__text">
+                  “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donecsed odio dui. Aenean eu leo
+                  quam..4.”
+                </div>
+                <div class="testimonials__author">
+                  Susan Sims, Interaction Designer at XYZ
+                </div>
               </div>
             </div>
-          </div>
+          <!-- </div> -->
 
-          <div class="testimonials__item">
-            <div class="testimonials__photo">
-              <img src="images/testimonials/testi.jpg" alt="photo">
-            </div>
-            <div class="testimonials__content">
-              <div class="reviews__text">
-                “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donecsed odio dui. Aenean eu leo quam..4.”
+          <!-- <div class="slick__item"> -->
+            <div class="testimonials__item">
+              <div class="testimonials__photo">
+                <img class="testimonials__icon" src="images/testimonials/testi.jpg" width="585" height="500"
+                  alt="photo">
               </div>
-              <div class="reviews__author">
-                Andry Ostrov, Interaction Designer at XYZ
+              <div class="testimonials__content">
+                <div class="testimonials__text">
+                  “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donecsed odio dui. Aenean eu leo quam..4.”
+                </div>
+                <div class="testimonials__author">
+                  Andry Ostrov, Interaction Designer at XYZ
+                </div>
               </div>
             </div>
-          </div>
+          A
         </div>
+      </div>
+    </section>
+
+    <section class="download">
+      <div class="container">
+        <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
+        <div class="download__text">
+          <p>Fusce dapibus, tellus ac cursus commodo</p>
+        </div>
+        <a class="btn btn--download" href="#">Download Here</a>
       </div>
     </section>
   </main>
 
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
 
+        <div class="footer__item">
+          <h4 class="footer__title">Location</h4>
+          <address class="footer__address">
+            <div>3481 Melrose Place</div>
+            <div>Beverly Hills, CA 90210</div>
+          </address>
+        </div>
+
+        <div class="footer__item">
+          <h4 class="footer__title">Share with Love</h4>
+          <div class="social social--footer">
+            <a href="#" class="social__item">
+              <svg class="social__icon">
+                <use xlink:href="images/social-icon/sprite.svg#fb"></use>
+              </svg>
+            </a>
+
+            <a href="#" class="social__item">
+              <svg class="social__icon">
+                <use xlink:href="images/social-icon/sprite.svg#tw"></use>
+              </svg>
+            </a>
+
+            <a href="#" class="social__item">
+              <svg class="social__icon">
+                <use xlink:href="images/social-icon/sprite.svg#li"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__item">
+          <h4 class="footer__title">About ActiveBox</h4>
+          <div class="footer__text">
+            <p>
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctorfringilla.
+              
+            </p>
+          </div>
+        </div>
+
+       </div>
+    </div>
+
+    <div class="copyright">
+      <div class="container">
+        <div class="copyright__text">
+          <p>
+            Copyright © 2015 ActiveBox. All Rights Reserved
+          </p>
+          <p>Made with
+            <span style="color:#e84545;">&#10084</span>
+            <span>by Kamal Chaneman</span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 
